tests/NormalTests/paczka1/fuzzy1/49171276.err
Error in line 12: gmbRhQZIyj A622 18,1
Error in line 22: pWHr6z A257 67,2
Error in line 29: pWHr6z A69 75,5
Error in line 26: 5xrZGYjVEwm S425 31,5
Error in line 36: 8yRcJz S425 64,5
Error in line 37: 8yRcJz A69 34,9
